--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="site web, site internet, agence design lyon,agence design, web design, web, internet, agence web, pays lyonnais, illustrations, lyon">
-    <meta name="description" content="">
+    <meta name="description" content="Agence web qui souhaite aider les entreprises de la région lyonnaise à créer ou améliorer leur site web pour les rendre plus attractives.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
