--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="site web, site internet, agence design lyon,agence design, web design, web, internet, agence web, pays lyonnais, illustrations, lyon">
+    <meta name="keywords" content="Entre prise web design, site web, site internet, agence design lyon,agence design, web design, web, internet, agence web, pays lyonnais, illustrations, lyon">
     <meta name="description" content="Agence web qui souhaite aider les entreprises de la région lyonnaise à créer ou améliorer leur site web pour les rendre plus attractives.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -90,9 +90,9 @@
 				<div class="text-center">
 					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Web design
-				</h3>
+				</h2>
 				<p class="text-center ">
 					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
@@ -101,9 +101,9 @@
 				<div class="text-center">
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					&nbsp;Stratégie
-				</h3>
+				</h2>
 				<p class="text-center ">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 				</p>
@@ -112,9 +112,9 @@
 				<div class="text-center">
 					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Illustrations
-				</h3>
+				</h2>
 				<p class="text-center ">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
@@ -166,18 +166,18 @@
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Image du site d'un journal représentant des revues ouvertes" class="img-responsive portfolio-thumb" /></a>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
-				</h3>
+				</h2>
 				<p class="text-center">
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 				</p>
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Image d'un site web pour photographes représentant une photograpge prenant un cliché" /></a>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Création d'un site web pour photographes
-				</h3>
+				</h2>
 				<p class="text-center">
 					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 				</p>
@@ -186,18 +186,18 @@
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Image d'un site web pour voyageur représentant une sacoche contenant divers appareils informatiques"/></a>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
-				</h3>
+				</h2>
 				<p class="text-center">
 					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 				</p>
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Image d'un site web pour agence de mariage représentant divers objets préparés pour un mariage" /></a>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
-				</h3>
+				</h2>
 				<p class="text-center">
 					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 				</p>
