--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<div class="text-center">
 					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h2 class="mg-md text-center">
+				<h2 class="mg-md text-center text-correction">
 					Web design
 				</h2>
 				<p class="text-center ">
@@ -101,7 +101,7 @@
 				<div class="text-center">
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h2 class="mg-md text-center">
+				<h2 class="mg-md text-center text-correction">
 					&nbsp;Stratégie
 				</h2>
 				<p class="text-center ">
@@ -112,10 +112,10 @@
 				<div class="text-center">
 					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h2 class="mg-md text-center">
+				<h2 class="mg-md text-center text-correction">
 					Illustrations
 				</h2>
-				<p class="text-center ">
+				<p class="text-center">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
 			</div>
@@ -166,7 +166,7 @@
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Image du site d'un journal représentant des revues ouvertes" class="img-responsive portfolio-thumb" /></a>
-				<h2 class="mg-md text-center">
+				<h2 class="mg-md text-center text-correction">
 					Refonte d'un site web pour un journal local
 				</h2>
 				<p class="text-center">
@@ -175,7 +175,7 @@
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Image d'un site web pour photographes représentant une photograpge prenant un cliché" /></a>
-				<h2 class="mg-md text-center">
+				<h2 class="mg-md text-center text-correction">
 					Création d'un site web pour photographes
 				</h2>
 				<p class="text-center">
@@ -186,7 +186,7 @@
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Image d'un site web pour voyageur représentant une sacoche contenant divers appareils informatiques"/></a>
-				<h2 class="mg-md text-center">
+				<h2 class="mg-md text-center text-correction">
 					Création d'un site internet pour un voyageur
 				</h2>
 				<p class="text-center">
@@ -195,7 +195,7 @@
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Image d'un site web pour agence de mariage représentant divers objets préparés pour un mariage" /></a>
-				<h2 class="mg-md text-center">
+				<h2 class="mg-md text-center text-correction">
 					Conception d'un site pour une agence de mariage
 				</h2>
 				<p class="text-center">
