2eme correction sur taille des images (logo)

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" alt="Logo : chouette en dégradé orange jaune sur fond noir" />
+				<img src="img/logo.png" class="center-block image-resize-mode" alt="Logo : chouette en dégradé orange jaune sur fond noir" width="100" height ="100" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
 				</h1>
